[gd_scene load_steps=11 format=3 uid="uid://5dawxk67ob32"]

[ext_resource type="Texture2D" uid="uid://dpcjwifb5ocd4" path="res://art/Player Art/run_0.png" id="1_5an6p"]
[ext_resource type="Script" path="res://player.gd" id="1_lmqur"]
[ext_resource type="Texture2D" uid="uid://bx4m21vs7vghf" path="res://art/Player Art/run_1.png" id="2_u00dc"]
[ext_resource type="Texture2D" uid="uid://bnocuqsp5n8lu" path="res://art/Player Art/run_2.png" id="3_5egso"]
[ext_resource type="Texture2D" uid="uid://bqju0gnrwy5py" path="res://art/Player Art/run_3.png" id="4_dip28"]
[ext_resource type="Texture2D" uid="uid://eitwksaky742" path="res://art/Player Art/run_4.png" id="5_4rl7y"]
[ext_resource type="Texture2D" uid="uid://cpk7iga3sofl4" path="res://art/Player Art/run_5.png" id="6_8waou"]
[ext_resource type="AudioStream" uid="uid://clamsb4csfkhl" path="res://music/sfx_step_grass_l.wav" id="8_87lko"]

[sub_resource type="SpriteFrames" id="SpriteFrames_uy2tr"]
animations = [{
"frames": [],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_5an6p")
}, {
"duration": 1.0,
"texture": ExtResource("2_u00dc")
}, {
"duration": 1.0,
"texture": ExtResource("3_5egso")
}, {
"duration": 1.0,
"texture": ExtResource("4_dip28")
}, {
"duration": 1.0,
"texture": ExtResource("5_4rl7y")
}, {
"duration": 1.0,
"texture": ExtResource("6_8waou")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ru3nh"]
size = Vector2(151, 165)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_lmqur")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(50, -30)
scale = Vector2(2.11724, 2.11724)
sprite_frames = SubResource("SpriteFrames_uy2tr")
animation = &"attack"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.5, 4.5)
shape = SubResource("RectangleShape2D_ru3nh")

[node name="walk_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_87lko")
volume_db = -8.433

[node name="WalkTimer" type="Timer" parent="."]
wait_time = 0.45

[connection signal="timeout" from="WalkTimer" to="." method="_on_walk_timer_timeout"]
